<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">blogging</string>
    <string name="action_settings">Settings</string>
    
    <string name="title">Blogging</string>
    <string name="author_title">Authors</string>
    <string name="post_title">All Post</string>
    <string name="post_author_title">My Post</string>
    <string name="login_form_title">Login</string>
    <string name="reg_form_title">Registration</string>
    <string name="ubah_profil_form_title">Ubah Profil</string>
    <string name="post_detail_title">Post Detail</string>
    <string name="add_post_title">Posting Baru</string>
    <string name="edit_post_title">Edit Postingan</string>
    
    <!-- New Post -->
    <string name="str_btn_simpan_post">Posting..</string>
    <string name="str_post_title_add">Judul</string>
    <string name="str_post_isi_add">Post</string>
    
    <!-- Edit post -->
     <string name="str_btn_ubah_post">Ubah..</string>
     
     <!-- Hapus post -->
     <string name="str_btn_hapus_post">Hapus..</string>
    
    <!-- Dashboar menu -->
    <string name="str_btn_daftar_post">Daftar Postingan</string>
    <string name="str_btn_tambah_post">Posting Baru</string>
    <string name="str_btn_ubah_profil">Ubah Profil</string>
    <string name="str_btn_logout">Logout</string>
    
    <!-- Author field values -->
    <string name="str_nama">Nama :</string>
    <string name="str_email">Email :</string>
    <string name="str_website">Website :</string>
    <string name="str_username">Username :</string>
    <string name="str_password">Password :</string>
    <string name="str_btn_simpan">Simpan</string>
    <string name="str_btn_hapus">Hapus</string>
    
    
    <!-- Login values -->
    <string name="str_username_login">Username :</string> 
    <string name="str_password_login">Password :</string> 
    <string name="str_btn_login">Login</string> 
    
     <!-- Menu List post -->
    <string name="str_btn_sign_in">Sign in</string> 
    <string name="str_btn_register">Register</string> 

</resources>
