<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/txt_status_pengguna_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="#FFFFFF" 
        />

    <Button
        android:id="@+id/btn_daftar_post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="#00BFFF"
        android:text="@string/str_btn_daftar_post"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_tambah_post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="#00BFFF"
        android:text="@string/str_btn_tambah_post"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_ubah_profil"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="#00BFFF"
        android:text="@string/str_btn_ubah_profil"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="#00BFFF"
        android:text="@string/str_btn_logout"
        android:textColor="#FFFFFF" />

</LinearLayout>