<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#00BFFF"
            android:text="@string/str_btn_sign_in"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#00BFFF"
            android:text="@string/str_btn_register"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>